OBMFULL-5613 Use Integer.valueOf and not new Integer().